# blaster

./: CMakeLists.txt  meson.build
include/: math.h
include/blaster/: color.h  command.h  constants.h  math.h  matrix.h  matrix_stack.h  optimization.h  queue.h  raster.h  texture.h  texturepool.h  tga.h  tile.h  time.h  vbo.h  vector.h  worker.h
src/: CMakeLists.txt  color.c  command.c  math.c  matrix.c  matrix_stack.c  meson.build  queue.c  raster.c  texture.c  texturepool.c  tga.c  tile.c  vbo.c  vector.c  worker.c
test/: main.c  meson.build  test-color.c  test-math.c
